# ECS153-hw0

./: README.md  generate_submission.sh
.devcontainer/: devcontainer.json
expected/: 0.txt  1.txt  2.txt  3.txt
input/: 0.txt  1.txt  2.txt  3.txt
src/: CMakeLists.txt  main.c
src/include/: GenericTraits.h  Human.h  Int.h  Rectangle.h  Student.h  quick_sort.h
src/lib/: GenericTraits.c  Human.c  Int.c  Rectangle.c  Student.c  quick_sort.c
